--- a/style.css
+++ b/style.css
@@ -106,27 +106,30 @@ body {
 .features-item-img-1 {
   border-radius: 300px 300px 0px 0px;
   background: rgba(167, 33, 98, 0.15);
+  padding: 50px;
 }
 .features-item-img-2 {
   border-radius: 300px 300px 0px 0px;
   background: rgba(5, 151, 160, 0.15);
+  padding: 50px;
 }
 .features-item-img-3 {
   border-radius: 300px 300px 0px 0px;
   background: rgba(71, 125, 17, 0.15);
+  padding: 50px;
 }
 
 .features-item-img-1 img {
-  height: 350px;
-  width: 300px;
+  height: 250px;
+  width: 200px;
 }
 .features-item-img-2 img {
-  height: 350px;
-  width: 300px;
+  height: 250px;
+  width: 200px;
 }
 .features-item-img-3 img {
-  height: 350px;
-  width: 300px;
+  height: 250px;
+  width: 200px;
 }
 
 .features-item-name {
@@ -213,10 +216,15 @@ body {
 }
 
 /* Testimonial Section */
+.testimonial-section {
+  background: rgba(39, 39, 39, 0.05);
+  height: 75vh;
+}
 .testimonial-title {
   font-size: 35px;
   font-weight: 700;
   text-align: center;
+  padding-top: 30px;
 }
 
 .testimonial-desc {
@@ -293,7 +301,7 @@ body {
 footer {
   background: #111010;
   color: #fff;
-  height: 350px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
